refactor: adjust api interface  to layer code
