# docs/swagger.yaml
@@ -53,6 +53,143 @@ definitions:
         description: token_type
         type: string
     type: object
+  model.AccessControl:
+    properties:
+      black_list:
+        type: string
+      clientip_flow_limit:
+        type: integer
+      createdAt:
+        type: string
+      id:
+        type: integer
+      isDeleted:
+        type: boolean
+      open_auth:
+        type: boolean
+      service_flow_limit:
+        type: integer
+      serviceInfoID:
+        type: integer
+      updatedAt:
+        type: string
+      white_host_name:
+        type: string
+      white_list:
+        type: string
+    type: object
+  model.GrpcRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
+  model.HttpRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      need_https:
+        type: boolean
+      need_strip_uri:
+        type: boolean
+      need_websocket:
+        type: boolean
+      rule:
+        type: string
+      rule_type:
+        type: integer
+      service_id:
+        type: integer
+      url_rewrite:
+        type: string
+    type: object
+  model.LoadBalance:
+    properties:
+      check_interval:
+        type: integer
+      check_method:
+        type: integer
+      check_timeout:
+        type: integer
+      forbid_list:
+        type: string
+      id:
+        type: integer
+      ip_list:
+        type: string
+      round_type:
+        type: integer
+      service_id:
+        type: integer
+      upstream_connect_timeout:
+        type: integer
+      upstream_header_timeout:
+        type: integer
+      upstream_idle_timeout:
+        type: integer
+      upstream_max_idle:
+        type: integer
+      weight_list:
+        type: string
+    type: object
+  model.Service:
+    properties:
+      accessControl:
+        $ref: '#/definitions/model.AccessControl'
+      createdAt:
+        type: string
+      grpcRole:
+        $ref: '#/definitions/model.GrpcRule'
+      httpRule:
+        $ref: '#/definitions/model.HttpRule'
+      id:
+        type: integer
+      isDeleted:
+        type: boolean
+      load_type:
+        type: integer
+      loadBalance:
+        $ref: '#/definitions/model.LoadBalance'
+      service_desc:
+        type: string
+      service_name:
+        type: string
+      tcpRole:
+        $ref: '#/definitions/model.TcpRule'
+      updatedAt:
+        type: string
+    type: object
+  model.ServiceDetail:
+    properties:
+      access_control:
+        $ref: '#/definitions/model.AccessControl'
+      grpc_rule:
+        $ref: '#/definitions/model.GrpcRule'
+      http_rule:
+        $ref: '#/definitions/model.HttpRule'
+      info:
+        $ref: '#/definitions/model.Service'
+      load_balance:
+        $ref: '#/definitions/model.LoadBalance'
+      tcp_rule:
+        $ref: '#/definitions/model.TcpRule'
+    type: object
+  model.TcpRule:
+    properties:
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
   public.Response:
     properties:
       data: {}
@@ -81,6 +218,42 @@ definitions:
     - InvalidRequestErrorCode
     - CustomizeCode
     - GROUPALL_SAVE_FLOWERROR
+  serviceDto.ServiceListItemOutput:
+    properties:
+      id:
+        description: id
+        type: integer
+      load_type:
+        description: 类型
+        type: integer
+      qpd:
+        description: qpd
+        type: integer
+      qps:
+        description: qps
+        type: integer
+      service_addr:
+        description: 服务地址
+        type: string
+      service_desc:
+        description: 服务描述
+        type: string
+      service_name:
+        description: 服务名称
+        type: string
+      total_node:
+        description: 节点数
+        type: integer
+    type: object
+  serviceDto.ServiceListOutput:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/serviceDto.ServiceListItemOutput'
+        type: array
+      total:
+        type: integer
+    type: object
 host: localhost:8880
 info:
   contact:
@@ -176,6 +349,73 @@ paths:
       summary: 管理员登陆
       tags:
       - Admin
+  /service:
+    get:
+      consumes:
+      - application/json
+      description: 服务列表
+      operationId: /service
+      parameters:
+      - description: 关键词
+        in: query
+        name: info
+        type: string
+      - description: 每页个数
+        in: query
+        name: page_size
+        required: true
+        type: integer
+      - description: 当前页数
+        in: query
+        name: page_no
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/public.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/serviceDto.ServiceListOutput'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 服务列表
+      tags:
+      - Service
+  /service/{service_id}:
+    get:
+      consumes:
+      - application/json
+      description: 服务列表
+      operationId: /service/{service_id}
+      parameters:
+      - description: 服务id
+        in: path
+        name: service_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/public.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.ServiceDetail'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 服务详情
+      tags:
+      - Service
 securityDefinitions:
   ApiKeyAuth:
     in: header
