# model/model.go
@@ -1,16 +1,22 @@
 package model
 
 import (
-	"database/sql"
-	"time"
+	"go-gateway/public"
 )
 
 
 type AbstractModel struct {
 	ID        uint `gorm:"primarykey;comment:自增主键"`
-	CreatedAt time.Time  `gorm:"comment:创建时间"`
-	UpdatedAt time.Time `gorm:"comment:更新时间"`
-	DeletedAt  sql.NullTime `gorm:"comment:删除时间"`
-	IsDeleted bool  `gorm:"comment:是否删除"`
+	CreateAt public.LocalTime  `json:"create_at" gorm:"comment:创建时间"`
+	UpdateAt public.LocalTime `json:"update_at" gorm:"comment:更新时间"`
+	IsDelete bool  `gorm:"comment:是否删除"`
 }
 
+type ServiceDetail struct {
+	Info          *Service   `json:"info" description:"基本信息"`
+	HTTPRule      *HttpRule      `json:"http_rule,omitempty" description:"http_rule"`
+	TCPRule       *TcpRule       `json:"tcp_rule,omitempty" description:"tcp_rule"`
+	GRPCRule      *GrpcRule      `json:"grpc_rule,omitempty" description:"grpc_rule"`
+	LoadBalance   *LoadBalance   `json:"load_balance,omitempty" description:"load_balance"`
+	AccessControl *AccessControl `json:"access_control,omitempty" description:"access_control"`
+}
