# model/service.go
@@ -3,7 +3,7 @@ package model
 import (
 	serviceDto "go-gateway/dto/service"
 	mysqlLib "go-gateway/lib/mysql"
-	"log"
+	"go-gateway/public"
 
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
@@ -11,17 +11,10 @@ import (
 
 type Service struct {
 	AbstractModel
-	LoadType    int       `json:"load_type" gorm:"comment:负载类型 0=http 1=tcp 2=grpc;"`
+	LoadType    public.LoadType       `json:"load_type" gorm:"comment:负载类型 0=http 1=tcp 2=grpc;"`
 	ServiceName string    `json:"service_name" gorm:"comment:服务名称;type:varchar(255);"`
 	ServiceDesc string    `json:"service_desc" gorm:"comment:服务描述;type:varchar(255);"`
-	AccessControl *AccessControl  `gorm:"foreignKey:ServiceInfoID;references:ID"`
-	HttpRule *HttpRule `gorm:"foreignKey:ServiceInfoID;references:ID"`
-	GrpcRole *GrpcRule `gorm:"foreignKey:ServiceInfoID;references:ID"`
-	LoadBalance *LoadBalance `gorm:"foreignKey:ServiceInfoID;references:ID"`
-	TcpRole *TcpRule `gorm:"foreignKey:ServiceInfoID;references:ID"`
 }
-
-
 
 func (t *Service) PageList(c *gin.Context, tx *gorm.DB, params *serviceDto.ServiceListInput) ([]Service, int64, error) {
 	var total int64
@@ -35,46 +28,57 @@ func (t *Service) PageList(c *gin.Context, tx *gorm.DB, params *serviceDto.Servi
 	return list, total, err
 }
  
-func (t *Service) ServiceDetail (c *gin.Context, tx *gorm.DB) (error) {
-
+func (t *Service) ServiceDetail (c *gin.Context, tx *gorm.DB)  (*ServiceDetail, error) {
+	
 	httpRule := &HttpRule{ServiceInfoID: t.ID}
-	err := httpRule.Find(c, tx)
+	httpRule, err := httpRule.Find(c, tx)
 
+	// 外键查询
+	// log.Printf("httpRule Preload Before %+v",httpRule)
+	// tx.Table(httpRule.TableName()).Preload("Service").Find(&httpRule)
+	// log.Printf("httpRule Preload After %+v", httpRule)
 	if err != nil {
-		return err
+		return nil, err
 	}
 
-	grpcRule := &GrpcRule{ServiceInfoID: int64(t.ID)}
-	err = grpcRule.Find(c, tx)
+	grpcRule := &GrpcRule{ServiceInfoID: t.ID}
+	grpcRule, err = grpcRule.Find(c, tx)
 
 	if err != nil {
-		return err
+		return nil, err
 	}
 
 	tcpRule := &TcpRule{ServiceInfoID: t.ID}
-	err = tcpRule.Find(c, tx)
+	tcpRule, err = tcpRule.Find(c, tx)
 
 	if err != nil {
-		return err
+		return nil, err
 	}
 	
 	accessControl := &AccessControl{ServiceInfoID: t.ID}
-	err = accessControl.Find(c, tx)
+	accessControl,err = accessControl.Find(c, tx)
 
 	if err != nil {
-		return err
+		return nil, err
 	}
 
-	log.Println(httpRule, "HttpRule")
-	log.Println(tcpRule, "tcpRule")
-	log.Println(grpcRule, "grpcRule")
-	log.Println(accessControl, "accessRule")
+	loadBalance := &LoadBalance{ServiceInfoID: t.ID}
+	loadBalance, err = loadBalance.Find(c, tx)
 
-	t.HttpRule = httpRule
-	t.GrpcRole = grpcRule
-	t.AccessControl = accessControl
-	t.TcpRole = tcpRule
-	return nil
+	if err != nil {
+		return nil, err
+	}
+
+	detail := &ServiceDetail{
+		Info: t,
+		HTTPRule: httpRule,
+		GRPCRule: grpcRule,
+		AccessControl: accessControl,
+		TCPRule: tcpRule,
+		LoadBalance: loadBalance,
+	}
+
+	return detail, nil
 }
 
 
