# model/tcpRule.go
@@ -9,7 +9,8 @@ import (
 
 type TcpRule struct {
 	ID        int64 `json:"id" gorm:"primary_key"`
-	ServiceInfoID uint `json:"service_id"`
+	ServiceInfoID      uint  `json:"service_id" gorm:"comment:服务id"`
+	Service *Service `json:"service,omitempty" gorm:"foreignKey:ServiceInfoID;references:ID"`
 	Port      int   `json:"port" gorm:"comment:端口"`
 }
 
@@ -17,8 +18,11 @@ func (t *TcpRule) TableName() string {
 	return "gateway_service_tcp_rule"
 }
 
-
-func (t *TcpRule) Find(c *gin.Context, tx *gorm.DB) error {
-	query := tx.Scopes(mysqlLib.WithContextAndTable(c, t.TableName()),mysqlLib.LogicalObjects())
-	return query.Find(t).Error
+func (t *TcpRule) Find(c *gin.Context, tx *gorm.DB) (*TcpRule, error) {
+	query := tx.Scopes(mysqlLib.WithContextAndTable(c, t.TableName()))
+	result := query.Find(t, "service_id = ?", t.ServiceInfoID).Error
+	if t.ID == 0 {
+		return nil, result
+	}
+	return t, result
 }
